<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MyServiceTestApp</string>
    <string name="action_settings">Settings</string>
	<string name="status">Status</string>
    <string name="result">Result</string>
	<string name="add">Add</string>
	<string name="substract">Substract</string>    
    <string name="start_service">Start Service</string>
	<string name="stop_service">Stop Service</string>
	<string name="kill_service">Kill Service</string>
</resources>
